--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
   <body>
     <div id="app">
       <div id="chat_container"></div>
-      <form>
-        <textarea name="prompt"  cols="1" rows="1" placeholder="Ask myChat..."></textarea>
-        <button type="submit"><img src="assets/send.svg" alt="icon-send"></button>
+      <form >
+        <textarea style="resize:none" name="prompt"  cols="1" rows="1" placeholder="Ask myChat..."></textarea>
+        <button class="button-send" type="submit"><img src="assets/send.png" alt="icon-send"></button>
       </form>
     </div>
     <script type="module" src="/script.js"></script>
